# LP1

./: README.md  int_ranges.cpp  reverse_gen.cpp  searching.cpp
canvas/include/: common.h
canvas/src/: canvas.cpp  driver_canvas.cpp
graal/: CMakeLists.txt
graal/include/: graal.h
graal/src/: graal.cpp  testes.cpp
graal/test/: main.cpp
graal/teste/: graal.cpp  testes  testes.cpp
lib_source/include/: int_ranges.h
lib_source/src/: int_ranges.cpp
lib_source/test/: main.cpp
life_simulator/: CMakeLists.txt
life_simulator/configs/: config2  config3  config4
life_simulator/include/: canvas.h  common.h  commun.h  life.h  life_simulator.h
life_simulator/src/: canvas.cpp  common.cpp  commun.cpp  life.cpp  life_simulator.cpp  main.cpp
lista_aquecimento/: problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp  problem6.cpp  problem7.cpp
pig_dice_game/includes/: dado.h  game.h  player.h
pig_dice_game/src/: dado.cpp  game.cpp  main.cpp  player.cpp  teste
pig_dice_game2/: CMakeLists.txt
pig_dice_game2/include/: dice.h  game.h  main.h
pig_dice_game2/includes/: dice.h  game.h  main.h  pc_player.h
pig_dice_game2/src/: dice.cpp  game.cpp  main.cpp  pc_player.cpp  teste
pig_game/includes/: dado.h  game.h  player.h
pig_game/srcs/: dado.cpp  game.cpp  main.cpp  player.cpp  teste
recursao/: pascal_tri_rec.cpp
snake/: CMakeLists.txt
snake/include/: common.h  snake.h  snake_game.h
snake/levels/: easy1
snake/src/: drive.cpp  snake.cpp  snake_game.cpp
streams/: exe2.cpp  print_head.cpp  str_int.cpp  tabela_suprema.cpp
(+4 files in other folders)
